--- a/client/less/base.less
+++ b/client/less/base.less
@@ -6,6 +6,12 @@ body{
 		margin-left:50px;
 	}
 }
+#main-content{
+	height:100%;
+}
+.userId{
+	float:right;
+}
 .row{
 	margin:0;
 }
@@ -13,6 +19,9 @@ body{
 	width:100%;
 	height:300px;
 	border-right:solid 2px @red;
+	@media (max-width: @screen-xs-max) {
+		display:none;
+	}
 }
 .left-nav ul{
 	color:@red;
@@ -30,6 +39,10 @@ body{
 		height:100px;
 		width:auto;
 	}
+	@media (max-width: @screen-xs-max) {
+		display:none;
+		height:0px;
+	}
 	
 	float:right;
 	margin-bottom:20px;
@@ -37,7 +50,12 @@ body{
 }
 #top-nav{
 	width:100%;
+	@media (max-width: @screen-xs-max) {
+		display:none;
+		height:0px;
+	}
 }
+
 
 #top-nav li{
 	color:@red;
@@ -49,4 +67,139 @@ body{
 	background:#ef7648;
 	width:100%;
 	height:100%;
+}
+#menu-toggle{
+	@media (min-width: @screen-sm-min) {
+		display:none;
+	}
+	font-size: 18px;
+}
+/*!
+ * Start Bootstrap - Simple Sidebar HTML Template (http://startbootstrap.com)
+ * Code licensed under the Apache License v2.0.
+ * For details, see http://www.apache.org/licenses/LICENSE-2.0.
+ */
+
+/* Toggle Styles */
+
+#wrapper {
+    padding-left: 0;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+#wrapper.toggled {
+    padding-left: 250px;
+}
+
+#sidebar-wrapper {
+    z-index: 1000;
+    position: fixed;
+    left: 250px;
+    width: 0;
+    height: 100%;
+    margin-left: -250px;
+    overflow-y: auto;
+    background: @red;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+    @media (min-width: @screen-sm-min) {
+		display:none;
+	}
+}
+
+#wrapper.toggled #sidebar-wrapper {
+    width: 250px;
+}
+
+#page-content-wrapper {
+    width: 100%;
+    position: absolute;
+    padding: 15px;
+}
+
+#wrapper.toggled #page-content-wrapper {
+    position: absolute;
+    margin-right: -250px;
+}
+
+/* Sidebar Styles */
+
+.sidebar-nav {
+    position: absolute;
+    top: 0;
+    width: 250px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.sidebar-nav li {
+    text-indent: 20px;
+    line-height: 40px;
+    color:white;
+}
+
+.sidebar-nav li a {
+    display: block;
+    text-decoration: none;
+    color:white;
+}
+
+.sidebar-nav li a:hover {
+    text-decoration: none;
+    color: #fff;
+    background: rgba(255,255,255,0.2);
+}
+
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+    text-decoration: none;
+}
+
+.sidebar-nav > .sidebar-brand {
+    height: 65px;
+    font-size: 18px;
+    line-height: 60px;
+}
+
+.sidebar-nav > .sidebar-brand a {
+    color: #999999;
+}
+
+.sidebar-nav > .sidebar-brand a:hover {
+    color: #fff;
+    background: none;
+}
+
+@media(min-width:768px) {
+    #wrapper {
+        padding-left: 0px;
+    }
+
+    #wrapper.toggled {
+        padding-left: 0;
+    }
+
+    #sidebar-wrapper {
+        width: 250px;
+    }
+
+    #wrapper.toggled #sidebar-wrapper {
+        width: 0;
+    }
+
+    #page-content-wrapper {
+        padding: 20px;
+        position: relative;
+    }
+
+    #wrapper.toggled #page-content-wrapper{
+        position: relative;
+        margin-right: 0;
+    }
 }
