--- a/client/less/base.less
+++ b/client/less/base.less
@@ -176,6 +176,9 @@ body{
     background: none;
 }
 
+.upload-success {
+    display: none;
+}
 @media(min-width:768px) {
     #wrapper {
         padding-left: 0px;
