File url working

--- a/client/less/base.less
+++ b/client/less/base.less
@@ -74,6 +74,39 @@ body{
 	}
 	font-size: 18px;
 }
+
+.document-icon{
+    font-size:20px;
+    margin-left:-5px;
+    margin-right:10px;
+}
+.share-record{
+    display:none;
+    position:absolute;
+    margin-left:-40px;
+}
+
+#new-record-outer{
+    text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*!
  * Start Bootstrap - Simple Sidebar HTML Template (http://startbootstrap.com)
  * Code licensed under the Apache License v2.0.
