--- a/client/less/base.less
+++ b/client/less/base.less
@@ -86,10 +86,60 @@ body{
     margin-left:-40px;
 }
 
-#new-record-outer{
+.new-record-outer{
     text-align: center;
+    padding-right:20px;
 }
 
+.new-record-records{
+    margin-bottom: 10px;
+}
+
+.panel-chat{
+    border: 0px;
+    margin:0px;
+    height:100%;
+}
+.panel-body-chat{
+    height:100%;
+    overflow-y:auto;
+}
+
+.chat
+{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.chat li
+{
+    margin-bottom: 10px;
+    padding-bottom: 5px;
+    border-bottom: 1px dotted #B3A9A9;
+}
+
+.chat li.left .chat-body
+{
+    margin-left: 60px;
+}
+
+.chat li.right .chat-body
+{
+    margin-right: 60px;
+}
+
+
+.chat li .chat-body p
+{
+    margin: 0;
+    color: #777777;
+}
+
+.panel .slidedown .glyphicon, .chat .glyphicon
+{
+    margin-right: 5px;
+}
 
 
 
